Boogie: AIFramework port part 3/3: Committing reference changes, edit to Core to jive with recent changes made to the cce class.

--- a/Source/BoogieDriver/BoogieDriver.csproj
+++ b/Source/BoogieDriver/BoogieDriver.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{DAB6BAA4-7AF7-449F-96AB-F58F34D03A7A}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -93,8 +93,8 @@
       <Project>{0EFA3E43-690B-48DC-A72C-384A3EA7F31F}</Project>
       <Name>AbsInt</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AIFramework\AIFramework.sscproj">
-      <Project>{24B55172-AD8B-47D1-8952-5A95CFDB9B31}</Project>
+    <ProjectReference Include="..\AIFramework\AIFramework.csproj">
+      <Project>{39B0658D-C955-41C5-9A43-48C97A1EF5FD}</Project>
       <Name>AIFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\Basetypes\Basetypes.sscproj">
@@ -120,10 +120,6 @@
     <ProjectReference Include="..\Provers\SMTLib\SMTLib.csproj">
       <Project>{9B163AA3-36BC-4AFB-88AB-79BC9E97E401}</Project>
       <Name>SMTLib</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Provers\Z3api\Z3api.csproj">
-      <Project>{966DD87B-A29D-4F3C-9406-F680A61DC0E0}</Project>
-      <Name>Z3api</Name>
     </ProjectReference>
     <ProjectReference Include="..\Provers\Z3\Z3.csproj">
       <Project>{BB49B90B-BE21-4BE8-85BA-359FDB55F4DF}</Project>
