--- a/Source/Core/Core.csproj
+++ b/Source/Core/Core.csproj
@@ -92,7 +92,6 @@
     <Compile Include="AbsyExpr.cs" />
     <Compile Include="AbsyQuant.cs" />
     <Compile Include="AbsyType.cs" />
-    <Compile Include="cce.cs" />
     <Compile Include="CommandLineOptions.cs" />
     <Compile Include="DeadVarElim.cs" />
     <Compile Include="Duplicator.cs" />
@@ -114,8 +113,8 @@
     <Compile Include="Xml.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AIFramework\AIFramework.sscproj">
-      <Project>{24B55172-AD8B-47D1-8952-5A95CFDB9B31}</Project>
+    <ProjectReference Include="..\AIFramework\AIFramework.csproj">
+      <Project>{39B0658D-C955-41C5-9A43-48C97A1EF5FD}</Project>
       <Name>AIFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\Basetypes\Basetypes.sscproj">
