--- a/Source/Provers/SMTLib/SMTLib.csproj
+++ b/Source/Provers/SMTLib/SMTLib.csproj
@@ -85,8 +85,8 @@
     <Compile Include="..\..\version.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\AIFramework\AIFramework.sscproj">
-      <Project>{24B55172-AD8B-47D1-8952-5A95CFDB9B31}</Project>
+    <ProjectReference Include="..\..\AIFramework\AIFramework.csproj">
+      <Project>{39B0658D-C955-41C5-9A43-48C97A1EF5FD}</Project>
       <Name>AIFramework</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\Basetypes\Basetypes.sscproj">
