Boogie: Graph port 3/3: Committing changed references; also, adding back cce files, to ease between-project conflict.  Will trim these back off after commit of Basetypes port in ~20 min.

--- a/Source/AIFramework/AIFramework.csproj
+++ b/Source/AIFramework/AIFramework.csproj
@@ -70,7 +70,9 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="cce.cs" />
+    <Compile Include="cce.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="CommonFunctionSymbols.cs" />
     <Compile Include="Expr.cs" />
     <Compile Include="Functional.cs" />
