--- a/Source/Provers/Isabelle/Isabelle.csproj
+++ b/Source/Provers/Isabelle/Isabelle.csproj
@@ -69,6 +69,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cce.cs" />
     <Compile Include="Prover.cs" />
     <Compile Include="..\..\version.cs" />
   </ItemGroup>
