--- a/Source/Provers/Simplify/Simplify.csproj
+++ b/Source/Provers/Simplify/Simplify.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cce.cs" />
     <Compile Include="Let2ImpliesVisitor.cs" />
     <Compile Include="Prover.cs" />
     <Compile Include="ProverInterface.cs" />
@@ -91,8 +92,8 @@
       <Project>{B230A69C-C466-4065-B9C1-84D80E76D802}</Project>
       <Name>Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Graph\Graph.sscproj">
-      <Project>{4C28FB90-630E-4B55-A937-11A011B79765}</Project>
+    <ProjectReference Include="..\..\Graph\Graph.csproj">
+      <Project>{69A2B0B8-BCAC-4101-AE7A-556FCC58C06E}</Project>
       <Name>Graph</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\VCExpr\VCExpr.csproj">
