--- a/Source/Provers/Z3/Z3.csproj
+++ b/Source/Provers/Z3/Z3.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="cce.cs" />
     <Compile Include="Inspector.cs" />
     <Compile Include="Prover.cs" />
     <Compile Include="ProverInterface.cs" />
