--- a/Source/AIFramework/AIFramework.csproj
+++ b/Source/AIFramework/AIFramework.csproj
@@ -92,8 +92,8 @@
     <Compile Include="VariableMap\VariableMapLattice.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Basetypes\Basetypes.sscproj">
-      <Project>{0C692837-77EC-415F-BF04-395E3ED06E9A}</Project>
+    <ProjectReference Include="..\Basetypes\Basetypes.csproj">
+      <Project>{43DFAD18-3E35-4558-9BE2-CAFF6B5BA8A0}</Project>
       <Name>Basetypes</Name>
     </ProjectReference>
   </ItemGroup>
