--- a/Source/BoogieDriver/BoogieDriver.csproj
+++ b/Source/BoogieDriver/BoogieDriver.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{DAB6BAA4-7AF7-449F-96AB-F58F34D03A7A}</ProjectGuid>
     <OutputType>Exe</OutputType>
@@ -98,8 +98,8 @@
       <Project>{39B0658D-C955-41C5-9A43-48C97A1EF5FD}</Project>
       <Name>AIFramework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Basetypes\Basetypes.sscproj">
-      <Project>{0C692837-77EC-415F-BF04-395E3ED06E9A}</Project>
+    <ProjectReference Include="..\Basetypes\Basetypes.csproj">
+      <Project>{43DFAD18-3E35-4558-9BE2-CAFF6B5BA8A0}</Project>
       <Name>Basetypes</Name>
     </ProjectReference>
     <ProjectReference Include="..\Core\Core.csproj">
