Boogie: Changed the cce classes into one separate project, which every other project in the Boogie solution references.  Dafny.csproj has an internal copy of cce, so does not reference this project, because the Dafny cce uses some Dafny-defined types in its helper methods.

--- a/Source/AIFramework/AIFramework.csproj
+++ b/Source/AIFramework/AIFramework.csproj
@@ -70,9 +70,6 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="cce.cs">
-      <SubType>Code</SubType>
-    </Compile>
     <Compile Include="CommonFunctionSymbols.cs" />
     <Compile Include="Expr.cs" />
     <Compile Include="Functional.cs" />
@@ -95,6 +92,10 @@
     <ProjectReference Include="..\Basetypes\Basetypes.csproj">
       <Project>{43DFAD18-3E35-4558-9BE2-CAFF6B5BA8A0}</Project>
       <Name>Basetypes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CodeContractsExtender\CodeContractsExtender.csproj">
+      <Project>{ACCC0156-0921-43ED-8F67-AD8BDC8CDE31}</Project>
+      <Name>CodeContractsExtender</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
