--- a/Source/AbsInt/AbsInt.csproj
+++ b/Source/AbsInt/AbsInt.csproj
@@ -81,7 +81,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractInterpretation.cs" />
-    <Compile Include="cce.cs" />
     <Compile Include="ExprFactories.cs" />
     <Compile Include="LoopInvariantsOnDemand.cs" />
     <Compile Include="Traverse.cs" />
@@ -95,6 +94,10 @@
     <ProjectReference Include="..\Basetypes\Basetypes.csproj">
       <Project>{43DFAD18-3E35-4558-9BE2-CAFF6B5BA8A0}</Project>
       <Name>Basetypes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CodeContractsExtender\CodeContractsExtender.csproj">
+      <Project>{ACCC0156-0921-43ED-8F67-AD8BDC8CDE31}</Project>
+      <Name>CodeContractsExtender</Name>
     </ProjectReference>
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{B230A69C-C466-4065-B9C1-84D80E76D802}</Project>
