--- a/Source/VCExpr/VCExpr.csproj
+++ b/Source/VCExpr/VCExpr.csproj
@@ -75,7 +75,6 @@
   <ItemGroup>
     <Compile Include="BigLiteralAbstracter.cs" />
     <Compile Include="Boogie2VCExpr.cs" />
-    <Compile Include="cce.cs" />
     <Compile Include="Clustering.cs" />
     <Compile Include="LetBindingSorter.cs" />
     <Compile Include="NameClashResolver.cs" />
@@ -96,6 +95,10 @@
     <ProjectReference Include="..\Basetypes\Basetypes.csproj">
       <Project>{43DFAD18-3E35-4558-9BE2-CAFF6B5BA8A0}</Project>
       <Name>Basetypes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CodeContractsExtender\CodeContractsExtender.csproj">
+      <Project>{ACCC0156-0921-43ED-8F67-AD8BDC8CDE31}</Project>
+      <Name>CodeContractsExtender</Name>
     </ProjectReference>
     <ProjectReference Include="..\Core\Core.csproj">
       <Project>{B230A69C-C466-4065-B9C1-84D80E76D802}</Project>
