--- a/.gitignore
+++ b/.gitignore
@@ -3,26 +3,17 @@ Source/AIFramework/obj/
 Source/AbsInt/bin/
 Source/AbsInt/obj/
 Source/Basetypes/bin/
-Source/Boogie.sln.cache
-Source/Boogie.suo
+Source/_ReSharper.Boogie
+Source/Provers/*/*.user
+Source/*/*.user
+Source/*.user
+Source/*.suo
+Source/*.cache
 Source/BoogieDriver/obj/
-Source/Core/bin/
-Source/Core/obj/
-Source/Graph/bin/
-Source/Graph/obj/
-Source/Provers/Isabelle/bin/
-Source/Provers/Isabelle/obj/
-Source/Provers/SMTLib/bin/
-Source/Provers/SMTLib/obj/
-Source/Provers/Simplify/bin/
-Source/Provers/Simplify/obj/
-Source/Provers/Z3/bin/
-Source/Provers/Z3/obj/
-Source/Provers/Z3api/obj/
-Source/VCExpr/bin/
-Source/VCExpr/obj/
-Source/VCGeneration/bin/
-Source/VCGeneration/obj/
+Source/*/bin
+Source/*/obj
+Source/Provers/*/bin
+Source/Provers/*/obj
 Binaries/ITaskManager.dll
 Binaries/ITaskManager.pdb
 Binaries/Microsoft.SpecSharp.Runtime.dll
@@ -71,3 +62,14 @@ Binaries/VCExpr.dll
 Binaries/VCExpr.pdb
 Binaries/VCGeneration.dll
 Binaries/VCGeneration.pdb
+Binaries/Boogie.vshost.exe
+Binaries/CodeContractsExtender.dll
+Binaries/CodeContractsExtender.pdb
+Binaries/Dafny.exe
+Binaries/Dafny.pdb
+Binaries/Dafny.vshost.exe
+Binaries/DafnyPipeline.dll
+Binaries/DafnyPipeline.pdb
+Test/*/Output
+Test/*/*.sx
+Test/VSComp2010/out.cs
