--- a/Source/ModelViewer/ModelViewer.csproj
+++ b/Source/ModelViewer/ModelViewer.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseProvider.cs" />
+    <Compile Include="DafnyProvider.cs" />
     <Compile Include="DataModel.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
