Refactoring: pulled out all code for stratified inlining to a new file.

--- a/Source/VCGeneration/VCGeneration.csproj
+++ b/Source/VCGeneration/VCGeneration.csproj
@@ -118,6 +118,7 @@
     <Compile Include="DoomCheck.cs" />
     <Compile Include="DoomErrorHandler.cs" />
     <Compile Include="OrderingAxioms.cs" />
+    <Compile Include="StratifiedVC.cs" />
     <Compile Include="VC.cs" />
     <Compile Include="VCDoomed.cs" />
     <Compile Include="..\version.cs" />
